istio/istio-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080  # Fixed NodePort
    name: http
  - port: 443
    targetPort: 8443
    nodePort: 30443  # Fixed NodePort
    name: https
  selector:
    istio: ingressgateway
